@@ -22,6 +22,7 @@
 #include "gretl_matrix.h"
 #include "gretl_matrix_private.h"
 #include "gretl_private.h"
+#include "libset.h"
 
 #define QR_RCOND_MIN 1e-15 /* experiment with this? */
 #define ESSZERO      1e-22 /* SSR < this counts as zero */
@@ -746,7 +747,7 @@ int gretl_qr_regress (MODEL *pmod, const double **Z, int fulln,
     /* VCV and standard errors */
     if (opts & OPT_R) { 
 	gretl_model_set_int(pmod, "robust", 1);
-	if (opts & OPT_T) {
+	if ((opts & OPT_T) & !get_force_hc()) {
 	    qr_make_hac(pmod, Z, xpxinv);
 	} else {
 	    qr_make_hccme(pmod, Z, Q, xpxinv);
